--- a/components/Style/initiativeCard.module.scss
+++ b/components/Style/initiativeCard.module.scss
@@ -1,11 +1,11 @@
 @import "../../base/index.scss";
 
 .initiativeCard {
-<<<<<<< HEAD
   position: relative;
   width: 22%;
   min-width: 400px;
   max-width: 460px;
+  line-height: 1.5;
   flex-grow: 1;
   height: $mn * 5.5;
   margin: $mn/4;
@@ -130,118 +130,4 @@
       }
     }
   }
-=======
-     position: relative;
-     width: 22%;
-     min-width: 400px;
-     flex-grow: 1;
-     height: $mn * 5.5;
-     margin: $mn/4;
-     cursor: pointer;
-     @media screen and (max-width: 400px) {
-          min-width: 250px;
-     }
-     .front,
-     .back {
-          background-color: $ColorAsh;
-          border-bottom-right-radius: 10px;
-          border-bottom-left-radius: 10px;
-          position: absolute;
-          will-change: transform, opacity;
-          width: 100%;
-          height: 100%;
-          padding: $mn/3;
-          box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.18);
-     }
-     .back {
-          // background-color: #fff;
-
-          color: $ColorRock;
-          @include FontNormal;
-          display: -webkit-box;
-          -webkit-line-clamp: 3;
-          -webkit-box-orient: vertical;
-          overflow: hidden;
-          // max-height: $mn * 1.5;
-     }
-
-     .readMore {
-          padding-top: $mn/2;
-
-          //  font-weight: 600;
-          //  opacity: 0.75;
-     }
-
-     .title {
-          @include FontExtraLarge;
-          height: auto;
-          min-height: 15%;
-     }
-
-     .host {
-          font-size: $mn/4;
-     }
-     .mainSponsor {
-          font-size: $mn/4;
-     }
-
-     .description {
-          color: $ColorRock;
-          font-size: $mn/5;
-          opacity: 0.6;
-     }
-
-     a {
-          width: min-content;
-          display: block;
-          text-decoration: none;
-          padding: $mn/6 0px;
-          @include FontNormal;
-     }
-     .bottomCard {
-          .colorGreen {
-               background: $ColorGreen;
-          }
-          .colorTeal {
-               background: $ColorTeal;
-          }
-          .colorPurple {
-               background: $ColorPurple;
-          }
-          .colorRed {
-               background: $ColorRed;
-          }
-          .colorYellow {
-               background: $ColorYellow;
-          }
-          .colorOrange {
-               background: $ColorOrange;
-          }
-          position: absolute;
-          left: 0;
-          bottom: 0;
-          .icons {
-               display: flex;
-               width: 100%;
-               justify-content: space-evenly;
-               padding: $mn/3 0px;
-               img {
-                    width: 9.5%;
-               }
-          }
-          .categoryColor {
-               position: relative;
-               height: $mn/4;
-               width: 100%;
-               border-bottom-right-radius: 10px;
-               border-bottom-left-radius: 10px;
-               div {
-                    height: 100%;
-                    width: 100%;
-                    border-bottom-right-radius: 10px;
-                    border-bottom-left-radius: 10px;
-               }
-          }
-     }
->>>>>>> 56d5529fc52dfbbf0ff55346c351df9cf1ea8d3b
 }
