--- a/components/Style/toggle.module.scss
+++ b/components/Style/toggle.module.scss
@@ -11,6 +11,7 @@
           width: 30 * 1.5px;
           height: 17 * 1.5px;
           display: flex;
+          flex-shrink: 0;
           input {
                opacity: 0;
                width: 0;
@@ -39,6 +40,9 @@
                     -webkit-transition: 0.4s;
                     transition: 0.4s;
                     border-radius: 50%;
+                    @include phone {
+                         left: 2 * 1px;
+                    }
                }
           }
           input:checked + .slider {
